função de logout implementada
